	  improve performance with small temporary files.
	- Updated book file format and added an appendix
	  describing the format.
	- Now default to PDF 1.3 (Acrobat 4.0) output format.
	- Now output length of PDF streams with the stream
	  object; this offers a modest reduction in file size.
	- The HTTP file cache now keeps track of previous files
	  that were downloaded.

    BUG FIXES

	- The web page output was not divided into chapters for
	  each input file.
	- The "make install" target did a clean.
	- The configure script would remove the image libraries
	  if you did not have FLTK installed.
	- The fix_filename() function didn't handle relative
	  URLs for images (e.g. SRC="../images/filename.gif")
	- Comments in the source document were being closed by
	  a </!--> tag in the HTML output.


CHANGES IN HTMLDOC v1.8.11

    NEW FEATURES

	- Added koi8-r character set.
	- Added new "TrueType" font option for PDF output. This
	  (hopefully) should improve support for non-latin
	  languages.
	- Added support for "justify" alignment; this is
	  currently implemented by adding additional space
	  between characters (no automatic hyphenation...)

    CHANGES

	- The "make install" target does a "make all" to ensure
	  that the software is built before installing it.  This
	  should help users that don't read the documentation
	  build the software.
	- Incorporated several OS/2 compile fixes from Alexander
	  Mai.
	- Tables that exceed the printable width of the page are
	  now squeezed to fit.

    BUG FIXES

	- The temporary file created for PDF output to stdout
	  was not unique.
	- The temporary file created for PDF output to stdout
	  did not use the GetTempPath() function under Windows.
	- The temporary file cleanup code did not use the
	  GetTempPath() function under Windows.
	- The prefs_load() function did not check the
	  HTMLDOC_DATA environment variable until after loading
	  the preferences file.  This could cause any saved